tests/NormalTests/paczka1/fuzzy1/92069815.err
Error in line 24: ETEUOxxzIXJ S534 95,8
Error in line 22: S285 S534 0,9
Error in line 18: 0NCW S285 68,1
Error in line 28: 0NCW A314 28,2
Error in line 25: ETEUOxxzIXJ S371 89,1
Error in line 35: 0NCW S285 88,4
